# battld

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  plan.md  rps_game_trace.md
client/: Cargo.toml
client/src/: api.rs  auth.rs  config.rs  leaderboard.rs  main.rs  rps.rs  state.rs  stats.rs  tris.rs  ui.rs  websocket.rs
client/src/games/: briscola.rs  chess.rs  mod.rs  rock_paper_scissors.rs  tic_tac_toe.rs
common/: Cargo.toml
common/src/: api.rs  auth.rs  lib.rs  player.rs  tris.rs  utils.rs
common/src/games/: briscola.rs  chess.rs  game_type.rs  matches.rs  mod.rs  players.rs  rock_paper_scissors.rs  tic_tac_toe.rs
migrations/: 20250101000000_initial_schema.sql  20250102000000_add_score_column.sql  20251006192402_initial_setup.sql
server/: Cargo.toml  install.py
server/src/: auth.rs  auth_endpoints.rs  csrf_protection.rs  database.rs  game_logic.rs  game_router.rs  log_requests.rs  main.rs  nonce_cache.rs  players.rs  rate_limit.rs  repository.rs  server_init.rs  session_cache.rs  stats.rs  websocket.rs
server/src/games/: briscola.rs  chess.rs  mod.rs  rock_paper_scissors.rs  tic_tac_toe.rs
server/static/: index.html  style.css
