[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
battld-common = { path = "../common" }
rand = { workspace = true }
axum = { version = "0.7", features = ["macros", "ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
rsa = { version = "0.9", features = ["sha2"] }
base64 = "0.22"
sha2 = "0.10"
common_macros = "0.1.1"
lazy_static = "1.5.0"
dotenvy = "0.15"
futures = "0.3"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tower = "0.5"
tower_governor = "0.4"
governor = "0.6"
uuid = { version = "1.0", features = ["v4", "serde"] }
subtle = "2.6"
